# NRL-ENGINE

./: .gitignore  .pre-commit-config.yaml  AGENT.md  README.md  nrl_scraper.ipynb  requirements.txt  setup.py  verify.py
.github/workflows/: data-pull-backfill-train.yml  main.yml  ml-dashboard.yml  ml-market-report.yml  odds-ingest.yml  pr-automerge.yml  pr-autoupdate.yml  train-bt-elo.yml
docs/: odds_ingestion.md
notebooks/: 30_odds_ingest_colab.ipynb  nrl_colab_runner.ipynb
nrl-scraper-final/: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  health.py  main.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
nrl-scraper-final/.github/: labels.yml  release-drafter.yml
nrl-scraper-final/.github/workflows/: ci.yml  export-data.yml  release.yml
nrl-scraper-final/docs/: RAILWAY.md  maintainers.md  ops.md
nrl-scraper-final/nrlscraper/: __init__.py  __version__.py  cli.py  config.py  db.py  export.py  historical.py  models.py  normalize.py  scraper.py  season.py
nrl-scraper-final/scripts/: bootstrap_db.sql  mark_deploy.sh
nrl-scraper-final/tests/: __init__.py  test_scraper.py
nrl-scraper-final/tools/: __init__.py  scraper_check.py  validate_aggregate.py
nrl_engine/: __init__.py  config.py  run_eval.py
tests/: __init__.py  test_integration.py  test_metrics.py  test_odds_gate.py  test_pit.py
tools/: __init__.py  build_proxy_odds.py  elo_travel.py  feature_brewery.py  fetch_api_odds.py  ingest_manual.py  multi_book.py  scrape_odds.py  sim_checker.py  train_market_anchor.py
(+23 files in other folders)
